# Community-IM

./: .gitignore  README.md  benchmark_result.json  benchmark_result_large_graphs.json  celf.py  community_im_main.py  dataset_manager.py  frac_influence.py  gim_im.py  gim_main.py  lim_im.py  main.py  make_community_im_plots.py  make_graphs.py  make_plots.py  mle_greedy.py  mle_selection.py  mle_selection_main.py  pyproject.toml  ris_selection.py
.github/workflows/: lint.yml
benchmark_configs/: community_im_settings.json
lim_code_release/allocation/: Temp_graph.txt_cimm_eps=0.500000_group_0_new
lim_code_release/result/: Temp_graph.txt_cimm_eps=0.500000_group_0_new
lim_code_release/src/: main.cpp  run
lim_code_release/time/: Temp_graph.txt_cimm_eps=0.500000_group_0_new
main_functions/: main_evaluation.py
results/results_Temp_graph/pickle_files/: output_lim__10__.pkl
results/results_Temp_graph/runtime_files/: runtime_info_lim.txt  runtime_info_lim_all.txt
ris_code_release/graphInfo/: deezer
