[project]
name = "community-im"
version = "0.1.0"
description = "Community im experiments"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "ruff==0.11.1",
  "mypy>=1.1.1",
  "networkx~=3.2.1",
  "pandas-stubs~=2.1.1.230928",
  "pandas>=2.2.0",
  "matplotlib~=3.8.1",
  "numpy>=2.0.0",
  "igraph>=0.10.6",
  "pytest~=7.4.3",
  "pytest-benchmark~=4.0.0",
  "leidenalg==0.10.1",
  "tikzplotlib~=0.10.1",
  "types-tqdm~=4.66.0.5",
  "tqdm~=4.66.1",
  "setuptools~=69.0.3",
  "cynetdiff==0.1.16",
  "pooch~=1.8.2",
  "depqdict",
]

[tool.uv]
package = false


[[tool.mypy.overrides]]
module = [
  "networkx.*",
  "graphblas_algorithms.*",
  "louvain.*",
  "leidenalg.*",
  "igraph.*",
  "tikzplotlib.*",
  "pooch.*",
]
ignore_missing_imports = true
